2001-10-01  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* lyxrc.C (read): 
	* vspace.C (inPixels): 
	(lyx_advance): 
	* kbmap.C (bind): 
	* buffer.C (insertStringAsLines): 
	(asciiParagraph): fix types to be large enough

	* lyxlex_pimpl.h: change member status from short to int

	* layout.h: fix type of endlabeltype

	* kbmap.C (bind): 
	* kbsequence.C (parse): change return type to string::size_type

	* LaTeX.C (updateBibtexDependencies): comment out unneeded
	variable

	* Bullet.C (bulletSize): 
	(bulletEntry): do not use short ints as parameters

	* BufferView2.C (insertLyXFile): change a char to an int.

	* WorkArea.C (WorkArea): remove unneeded floats in computation

2001-10-01  Dekel Tsur  <dekelts@tau.ac.il>

	* buffer.C (asciiParagraph): Treat '\\' as other chars.

	* paragraph.C (asString): Do not ignore newline/hfill chars when
 	copying to the clipboard.

2001-09-29  Dekel Tsur  <dekelts@tau.ac.il>

	* paragraph_pimpl.C (simpleTeXSpecialChars): Call to textrow.start
	after a multi-line inset.

2001-09-28  Dekel Tsur  <dekelts@tau.ac.il>

	* paragraph.C (validate): Set NeedLyXFootnoteCode

2001-09-27  Angus Leeming  <a.leeming@ic.ac.uk>

	* lyxfont.C (LyXSizeNames): changed increase-error to increase
	and decrease-error to decrease.

2001-09-27  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* text2.C (deleteEmptyParagraphMechanism): reformat a bit to make
	it more readable (should be equivalent)

2001-09-27  Adrien Rebollo  <adrien.rebollo@gmx.fr>

	* paragraph_pimpl.C (simpleTeXSpecialChars): handle latin9 too.

2001-09-26  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* text2.C (fixCursorAfterDelete): new method. Fixes the parameters
	of a cursor (row, etc.) after a character has been deleted
	(deleteEmptyParagraphMechanism): call the method above on _all_
	cursors held by the LyXText when a double space has been
	detected/deleted. 
2001-09-27  Angus Leeming  <a.leeming@ic.ac.uk>
