@@ -208,7 +208,6 @@ void BufferView::Pimpl::buffer(Buffer * b)
 		// hidden. This should go here because some dialogs (eg ToC)
 		// require bv_->text.
 		owner_->getDialogs()->updateBufferDependent(true);
-		workarea_.show();
 		redraw();
 		insetWakeup();
 	} else {
